--- a/Xception/Xception.ipynb
+++ b/Xception/Xception.ipynb
@@ -160,7 +160,7 @@
    "id": "a1a1e605",
    "metadata": {},
    "source": [
-    "![1](DL_img/Xception_Flow.png)"
+    "![1](./DL_img/Xception_Flow.png)"
    ]
   },
   {
